Update2 index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Pizzeria Dolus d'Oléron 🍕</title>
 <style>
 :root{--primary:#ff6b35;--success:#28a745;--dark:#212529}
@@ -144,3 +144,4 @@ function loadClientMemory(){
     const client = JSON.parse(saved);
     document.getElementById('prenom').value = client.prenom || '';
     document.getElementById('nom').value = client.nom
+
